Finish pork belly recipe
Add pork belly image and add ingredients list and steps

--- a/recipes/smoked-pork-belly-burnt-ends.html
+++ b/recipes/smoked-pork-belly-burnt-ends.html
@@ -7,5 +7,45 @@
 </head>
 <body>
     <h1>Smoked Pork Belly Burnt Ends</h1>
+    <img src="../img/smoked-pork-belly-burnt-ends.jpg" width="400" height="380" alt="Smoked pork belly burnt ends in a cooking pan on a wooden table">
+    <h2>Description</h2>
+    <p>
+        Smoked pork belly burnt ends are tender, bursting with flavor and easy to make. Smoke 'em low and slow, then top 'em off with sweet and sticky barbecue sauce for a bite-size crowd pleaser.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>Pork and Seasoning</h3>
+    <ul>
+        <li>1 whole pork belly, 8-10 pounds</li>
+        <li>3/4 cup brown sugar</li>
+        <li>1/4 cup paprika</li>
+        <li>1 tablespoons salt</li>
+        <li>1 tablespoon chili powder</li>
+        <li>1 tablespoon garlic powder</li>
+        <li>1 tablespoon onion powder</li>
+        <li>2 teaspoons black pepper</li>
+    </ul>
+    <h3>Sweet and Stick Barbecue Sauce</h3>
+    <ul>
+        <li>1 cup ketchup</li>
+        <li>1/2 cup brown sugar</li>
+        <li>1/4 cup apple juice</li>
+        <li>2 tablespoons apple cider vinegar</li>
+        <li>1 teaspoon salt</li>
+        <li>1/2 teaspoon onion powder</li>
+        <li>1/2 teaspoon garlic powder</li>
+        <li>1/4 teaspoon cayenne pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Slice the pork belly into 1 1/2 inch cubes.</li>
+        <li>Preheat your smoker to 275°F.</li>
+        <li>Combine the brown sugar, paprika, salt, chili powder, garlic powder, onion powder and black pepper, mixing to break up any lumps. Generously spread the mixture over the pork belly cubes, rotating the cubes to ensure that all sides are equally seasoned.</li>
+        <li>Place the pork belly cubes in your smoker. Close the lid and cook for 2 hours.</li>
+        <li>Transfer the pork belly cubes onto a large aluminum drip pan and cover with aluminum foil. Place the pan into your smoker for another 2 hours.</li>
+        <li>Combine all ingredients for the Sweet & Sticky Barbecue Sauce into a saucepan and bring to a simmer for 10 minutes.</li>
+        <li>Uncover the aluminum pan and drain all liquid. Pour the Sweet & Sticky Barbecue Sauce over the pork belly burnt ends and mix until all cubes are evenly coated.</li>
+        <li>Place the pan back into the smoker and raise the temperature of the smoker to 350°F. Cook for an additional 10-15 minutes.</li>
+        <li>Remove the pan from your smoker and let rest at room temperature for 20 minutes before serving.</li>
+    </ol>
 </body>
 </html>
