--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>
-        <a href="recipes/smoked-pork-belly-burnt-ends.html">Smoked Pork Belly Burnt Ends</a>
-    </p>
+    <ul>
+        <li>
+            <a href="recipes/smoked-pork-belly-burnt-ends.html">Smoked Pork Belly Burnt Ends</a>
+        </li>
+        <li>
+            <a href="recipes/chewy-brownies.html">Chewy Brownies</a>
+        </li>
+    </ul>
 </body>
 </html>
